[project]
name = "montagen"
description = "ComfyUI-Montagen is an extension designed to enhance the video editing ability of ComfyUI with custom nodes and Montagen. It offers basic video editing features and integrates media clips with the ComfyUI workflow. Furthermore, this extension unlocks the full potential of AI-based video generation and task automation."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["moviepy"]

[project.urls]
Repository = "https://github.com/MontagenAI/ComfyUI-Montagen"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Montagen"
Icon = ""
